--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
 
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.25.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
 }
 
 ext {
